--- a/css/custom.css
+++ b/css/custom.css
@@ -87,6 +87,11 @@ header {
 	background: linear-gradient(180deg, rgba(245, 68, 48, 0.5) 0%, rgba(245, 68, 48, 0.05) 100%);
 }
 
+.winners {
+	background: rgb(245, 68, 48);
+	background: linear-gradient(180deg, rgba(245, 68, 48, 0.5) 0%, rgba(245, 68, 48, 0.05) 100%);
+}
+
 .heading h2 {
 	font-weight: 800;
 	background: rgb(253, 134, 32);
