--- a/css/custom.css
+++ b/css/custom.css
@@ -10,7 +10,7 @@ header {
 }
 
 .logo img {
-	width: 40px;
+	width: 28px;
 }
 
 #banner {
@@ -19,9 +19,9 @@ header {
 	background-position-x: center;
 	background-position-y: top;
 	background-size: cover;
-	padding-top: 160px;
-	padding-bottom: 120px;
-	min-height: 400px;
+	padding-top: 130px;
+	padding-bottom: 80px;
+	
 }
 
 .banner-text h2 {
@@ -73,8 +73,8 @@ header {
 }
 
 #content {
-	padding-top: 6rem;
-	padding-bottom: 6rem;
+	padding-top: 3rem;
+	padding-bottom: 3rem;
 	background-image: url('../images/content-bg.jpg');
 	background-repeat: no-repeat;
 	background-position-x: center;
@@ -92,7 +92,7 @@ header {
 	background: linear-gradient(180deg, rgba(245, 68, 48, 0.5) 0%, rgba(245, 68, 48, 0.05) 100%);
 }
 
-.heading h2 {
+.heading h3 {
 	font-weight: 800;
 	background: rgb(253, 134, 32);
 	background: linear-gradient(180deg, rgba(253, 134, 32, 1) 0%, rgba(255, 215, 60, 1) 100%);
@@ -102,33 +102,22 @@ header {
 }
 
 .progress {
-	height: 2rem;
+	height: 1.75rem;
 }
 
 .feature {
 	background: rgb(46, 21, 10);
 	background: linear-gradient(90deg, rgba(148, 67, 31, 0.3) 0%, rgba(46, 21, 10, 0.3) 100%);
-}
-
-.feature-2 {
-	margin-top: 8rem !important;
-}
-
-.feature-3 {
-	margin-top: -5rem !important;
-}
-
-.feature-5 {
-	margin-top: -5rem !important;
+	min-height: 190px !important;
 }
 
 .feature-star {
-	left: -28px;
-	top: -20px;
+	left: -20px;
+	top: -12px;
 }
 
 .feature-star img {
-	width: 56px;
+	width: 40px;
 }
 
 ul.list-feature {
@@ -140,11 +129,11 @@ ul.list-feature li {
 	background-image: url('../images/list-arrow.svg');
 	background-repeat: no-repeat;
 	background-position-y: 3px;
-	background-size: 24px;
-	font-size: 1.1rem;
+	background-size: 16px;
 	list-style-type: none;
-	margin-bottom: 1rem;
-	padding-left: 32px;
+	margin-bottom: 0.5rem;
+	padding-left: 24px;
+	font-size: 14px;
 }
 
 ul.list-feature li:last-child {
@@ -177,6 +166,6 @@ footer {
 
 .timeContainer .wrapper div h2 {
 	color: #fff;
-	font-size: 3rem;
+	font-size: 2.5rem;
 	margin-bottom: 0px;
 }
